# MPI-Labs

./: .gitignore
lab1/: CMakeLists.txt  input.txt  main.c
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  main.cpp
lab3/input/: graph.txt  smallgraph.txt
